internal/gatewayapi/testdata/gateway-with-two-listeners-with-udproutes-with-sectionname.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: udp1
          protocol: UDP
          port: 162
          allowedRoutes:
            namespaces:
              from: All
        - name: udp2
          protocol: UDP
          port: 163
          allowedRoutes:
            namespaces:
              from: All
udpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: UDPRoute
    metadata:
      namespace: default
      name: udproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: udp1
      rules:
        - backendRefs:
            - name: service-1
              port: 8162
  - apiVersion: gateway.networking.k8s.io/v1
    kind: UDPRoute
    metadata:
      namespace: default
      name: udproute-2
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: udp2
      rules:
        - backendRefs:
            - name: service-2
              port: 8162
